--- a/revision/notebooks/library_versions.Rmd
+++ b/revision/notebooks/library_versions.Rmd
@@ -7,12 +7,94 @@ output: html_notebook
 
 ```{r}
 library(tidyverse)
+library(latex2exp)
+library(extrafont)
+library(moments)
+
+# set fonts
+loadfonts(device = "pdf")
+# font_import()
+# link www.fontsquirrel.com/fonts/latin-modern-roman
+
+# execute once to add fonts:
+# font_import(pattern = "lmroman*")
+# theme(legend.position = "top", text=element_text(size=14, family="LM Roman 10"))
+
+# set ggplot global theme
+theme_set(theme_bw() +
+            theme(legend.position = "top") +
+            theme(text = element_text(size = 18, family = "LM Roman 10")))
+
+# multiple figures together
+if(!require(devtools)) install.packages("devtools")
+# devtools::install_github("thomasp85/patchwork")
+library(patchwork)
+library(tikzDevice)
+options(tz="CA")
+
+# Colors
+# green: #009d81
+# yellow: #f5a300
+# gray: #808080
+# red: #e6001a
+# blue: #0083cc
+
+# Best Colors (https://github.com/OrdnanceSurvey/GeoDataViz-Toolkit/blob/master/Colours/GDV%20colour%20palettes%200.7.pdf)
+# green: #00cd6c
+# yellow: #ffc61e
+# gray: #a0b1ba
+# red: #ff1f5d
+# blue: #009ade
+# purple: #af58ba
+# orange: #f28522
+# brown: #a6761d
+
+
+###################################################
+#################### FUNCTIONS ####################
+###################################################
+
+save_figure <- function(the_ggplot_object, the_name, the_with, the_height){
+  tikz(file = paste(the_name, "tex", sep = "." ), width = the_with, height = the_height)
+  print(the_ggplot_object)
+  dev.off()
+  ggsave(filename = paste(the_name, "pdf", sep = "." ), 
+         plot = the_ggplot_object, 
+         height = the_height,
+         width = the_with, 
+         units = c("in"),
+         device=cairo_pdf)
+}
 ```
 
 # Read the data
 
 ```{r}
 data <- read.delim("Data/lib_debloat_status_per_version.csv", sep = ",", header = T, stringsAsFactors = TRUE)
+```
+
+# Analyze the skeweness of the data
+
+```{r}
+summary(data$NbVersions)
+sd(data$NbVersions)
+
+
+skewness(data$NbDebloatedVersions/data$NbVersions)
+
+skewness(data$NbVersions)
+
+agostino.test(data$NbVersions)
+
+agostino.test(data$NbDebloatedVersions/data$NbVersions)
+
+
+data %>% 
+  ggplot(aes(x = NbVersions, y = "libraries")) +
+  geom_boxplot()
+
+
+
 ```
 
 # Plot debloated versions per library
@@ -42,26 +124,28 @@ df_debloat_success <- data %>%
   mutate(ID = row_number()) %>% 
   select(Library, ID, NbDebloatedVersions) %>%
   rename(Versions = NbDebloatedVersions) %>% 
-  mutate(Debloating = "Success")
+  mutate(`Debloating result` = "Success")
   
 df_debloat_fail <- data %>% 
   mutate(NbNotDebloatedVersions = NbVersions - NbDebloatedVersions) %>%
   mutate(ID = row_number()) %>% 
   select(Library, ID, NbNotDebloatedVersions) %>% 
   rename(Versions = NbNotDebloatedVersions) %>% 
-  mutate(Debloating = "Fail")
+  mutate(`Debloating result` = "Fail")
 
-rbind(df_debloat_success, df_debloat_fail) %>% 
-  ggplot(aes(x = reorder(ID,(-Versions)), y = Versions, fill = Debloating)) + 
+
+barplot_versions_debloat_per_lib <- rbind(df_debloat_success, df_debloat_fail) %>% 
+  ggplot(aes(x = reorder(ID,(-Versions)), y = Versions, fill = `Debloating result`)) + 
   geom_bar(stat = "identity") +
   scale_x_discrete(breaks=c(71,94),
         labels=c(1, 95)) +
   xlab("unique libraries") +
-  ylab("# of versions") +
-  theme_bw()
+  ylab("\\# of versions") +
+  theme_bw() +
+  theme(legend.position = "top", legend.direction = "horizontal")
   # theme(axis.text.x = element_text(angle = 90)) 
-  
-  
- 
+
+barplot_versions_debloat_per_lib
+save_figure(barplot_versions_debloat_per_lib, "Figures/barplot_versions_debloat_per_lib", 5.5, 3.5)
 
 ```
