Rectify Fig #2 in the revision letter

--- a/notebooks/analysis_initial.Rmd
+++ b/notebooks/analysis_initial.Rmd
@@ -64,6 +64,14 @@ results <- results %>% filter(ID %!in% c("apache_sling-org-apache-sling-api_2.16
 
 results <- results %>% distinct()
 View(results)
+
+
+
+colnames(results)
+head(results)
+
+results %>% filter(Debloat == "True") %>% group_by(Lib) %>% summarize(n = n())
+
 ```
 
 
